nesc-frontend/src/test/resources/integration/programs/good/good15/M.nc
module M
{
   provides interface I<long>;
}
implementation
{
   task void doSignal()
   {
      signal I.initDone(5);
   }

   command void I.init()
   {
      post doSignal();
   }
}
