nesc-frontend/src/test/resources/integration/programs/bad/bad33/M.nc
module M
{
   provides command void c();
}
implementation
{
   task void t();

   command void c()
   {
       post t();
   }
}
